--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/scottrbrtsn/DBproject/ojdbc7_g.jar"/>
+	<classpathentry kind="lib" path="/Users/chenglin/Dropbox/Development/db-gui/jdbcLibary/ojdbc7_g.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
